--- a/style.css
+++ b/style.css
@@ -7,11 +7,21 @@ main{
     margin-top:50px;
     box-shadow: 10px 10px 10px grey;
 }
+h1 {
+    color:purple
+}
 h2 {
     color: white;
 }
 h3 {
     color: magenta;
+}
+main p {
+    width: 350px;
+}
+
+q {
+    color:white
 }
 .box{
     background-color:purple ;
@@ -22,3 +32,4 @@ h3 {
     padding: 30px;
 
 }
+
