--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 main{
-    width:80%;
-    height:100%;
+    position: relative;
+    height: 600px;
     padding: 40px;
     border: 2px solid black;
     margin:10%;
@@ -27,18 +27,53 @@ q {
     background-color:purple ;
     height: 200px;
     width:300px;
+    margin-left: 30px;
     display: inline-block;
     border-radius: 5px;
     padding: 30px;
+    position:absolute;
 
+}
+
+section{
+    margin-top: 40px;
+  
 }
 
 .upperbox {
+    margin-left:;
+   
 
 }
 .middlebox {
+    margin-left: 420px;
+    margin-top:10px;
 
 }
 .lowerbox {
+    margin-left:820px;
+    margin-top:20px;
     
+}
+
+aside{
+    position:absolute ;
+    margin-left:600px;
+}
+
+.star{
+    width:300px;
+    height:20px;
+    margin-top: 20px;
+    padding:10px;
+    border-radius: 10px;
+    background-color: peachpuff;
+}
+
+.middlebar{
+margin-left: 40px;
+}
+
+.lowerbar{
+    margin-left:80px;
 }
