--- a/style.css
+++ b/style.css
@@ -1,11 +1,18 @@
+* {
+    border: 1px solid black;
+    
+}
+
 main{
-    position: relative;
-    height: 600px;
+    /* position: relative; */
     padding: 40px;
     border: 2px solid black;
-    margin:10%;
+    /* margin:10%; */
     margin-top:50px;
     box-shadow: 10px 10px 10px grey;
+    width: 80%;
+        /* top/btm, left/right */
+    margin: 0 auto;
 }
 h1 {
     color:purple
@@ -26,13 +33,13 @@ q {
 .box{
     background-color:purple ;
     height: 200px;
-    width:300px;
+    /* width:300px; */
+    width: 25%;
     margin-left: 30px;
     display: inline-block;
     border-radius: 5px;
     padding: 30px;
-    position:absolute;
-
+    /* position:relative; */
 }
 
 section{
@@ -41,34 +48,51 @@ section{
 }
 
 .upperbox {
-    margin-left:;
+    /* margin-left:; */
    
 
 }
 .middlebox {
-    margin-left: 420px;
-    margin-top:10px;
+    /* margin-left: 420px; */
+    /* margin-top:10px; */
 
 }
 .lowerbox {
-    margin-left:820px;
-    margin-top:20px;
+    /* margin-left:820px; */
+    /* margin-top:20px; */
+    
+}
+
+.topHalf {
+    width: 100%;
     
 }
 
 aside{
     position:absolute ;
-    margin-left:600px;
+    /* margin-left:600px; */
+    display: inline-block;
+    margin-left: 40px;
+}
+
+.reviews, aside {
+    width: 45%;
+}
+
+.reviews {
+    display: inline-block;
 }
 
 .star{
-    width:300px;
+    display: relative;
+    right: 0;
+    /* width:300px; */
     height:20px;
     margin-top: 20px;
     padding:10px;
     border-radius: 10px;
     background-color: peachpuff;
-}
+} 
 
 .middlebar{
 margin-left: 40px;
