--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-* {
-    border: 1px solid black;
-    
-}
 
 main{
     /* position: relative; */
@@ -76,7 +72,7 @@ aside{
 }
 
 .reviews, aside {
-    width: 45%;
+    width: 40%;
 }
 
 .reviews {
@@ -86,12 +82,12 @@ aside{
 .star{
     display: relative;
     right: 0;
-    /* width:300px; */
+    width:80%;
     height:20px;
     margin-top: 20px;
     padding:10px;
     border-radius: 10px;
-    background-color: peachpuff;
+    background-color: rgb(250, 246, 251);
 } 
 
 .middlebar{
@@ -100,4 +96,14 @@ margin-left: 40px;
 
 .lowerbar{
     margin-left:80px;
+}
+
+.fas{
+    color:orange;
+    margin-left:5px;   
+}
+
+span{
+    font-weight: bold;
+    margin-left: 20px;
 }
