--- a/style.css
+++ b/style.css
@@ -11,10 +11,12 @@ main{
     margin: 0 auto;
 }
 h1 {
-    color:purple
+    color:purple;
+    font-size: 40px;
 }
 h2 {
     color: white;
+    display: inline-block;
 }
 h3 {
     color: magenta;
@@ -28,13 +30,13 @@ q {
 }
 .box{
     background-color:purple ;
-    height: 200px;
+    /* height: 200px; */
     /* width:300px; */
     width: 25%;
     margin-left: 30px;
     display: inline-block;
-    border-radius: 5px;
-    padding: 30px;
+    border-radius: 10px;
+    padding: 15px;
     /* position:relative; */
 }
 
@@ -106,4 +108,14 @@ margin-left: 40px;
 span{
     font-weight: bold;
     margin-left: 20px;
+}
+
+
+.profile{
+    width: 30px;
+    height: 30px;
+    border-radius: 50px;
+    display: inline-block;
+    margin-left: 10px;
+    margin-right: 10px;
 }
